crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__block_params_mismatched.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 6
        },
        "end": {
          "line": 6,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 10
              },
              "end": {
                "line": 5,
                "character": 25
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
