crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__builtin_instr_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 23
        },
        "end": {
          "line": 0,
          "character": 36
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected type `i32`, found `i64`"
    }
  ]
}
