crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__call_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 20
        },
        "end": {
          "line": 3,
          "character": 33
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected type `f32`, found `i32`"
    }
  ]
}
